fix: some styling issues that were visible in prod but not in dev

--- a/docs/src/styles/base.css
+++ b/docs/src/styles/base.css
@@ -1,25 +1,13 @@
-.btn {
-  @apply lowercase rounded-full;
-}
-
-.box {
-  @apply uppercase bg-neutral-700 rounded-full;
-}
-
-.logo {
-  /* background-color: red; */
+.github-logo {
   mask: url(/images/github-mark.svg) no-repeat center;
   mask-size: cover;
-
-  /* mask: url("/images/github-mark.svg") no-repeat center; */
 }
 
-.btn:hover .logo {
+.btn:hover .github-logo {
   @apply transition-colors;
   background-color: white;
 }
 
 .text-gradient-2 {
-  /* @apply bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%; */
   @apply text-transparent text-8xl bg-clip-text bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%;
 }
